Change Log - 2.1.1.9 (03/28/2017)
- Full screen option for cemu
- Current title version displayed
- Implemented DeleteTitleButton()

Change Log - 2.1.1.8 (03/27/2017)
- Fixed an installer error

Change Log - 2.1.1.2 (03/26/2017)
- Added dynamic context menu items 
- Implemented LaunchCemuButton()
- Implemented AddUpdateButton()
- Implemented RemoveUpdateButton()
- Implemented AddDLCButton()
- Implemented RemoveDLCButton()