@@ -16,16 +16,19 @@ namespace MapleLib.WiiU
     {
         private static readonly int TK = 0x140;
 
-        private static void PatchDLC(ref List<byte> ticket)
+        private static void PatchDLC(ref List<byte> ticketData)
         {
             var data = Convert.FromBase64String("eNpjYGQQYWBgWAPEIgwQNghoADEjELeAMTNE8D8BwEBjAABCdSH/");
             var tmasd = new ZInputStream(new MemoryStream(data));
             data = tmasd.ReadBytes(data.Length);
             File.WriteAllBytes("DLCPatch", data);
-            ticket.InsertRange(TK + 0x164, data);
+            ticketData.InsertRange(TK + 0x164, data);
         }
 
-        private static void PatchDemo(ref List<byte> ticket) {}
+        private static void PatchDemo(ref List<byte> ticketData)
+        {
+            ticketData.InsertRange(TK + 0x124, new byte[0x00 * 64]);
+        }
 
         /// <summary>
         ///     Creates a blank ticket using the referenced title
