@@ -2,6 +2,8 @@ Change Log - 2.1.1.9 (03/28/2017)
 - Full screen option for cemu
 - Current title version displayed
 - Implemented DeleteTitleButton()
+- Implemented a ticket generator (1 less remote call)
+- Backend code improvements
 
 Change Log - 2.1.1.8 (03/27/2017)
 - Fixed an installer error
